
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* DFLTHOST ;
 unsigned int DFLTPORT ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 unsigned int atoi (char*) ;
 int fgfsclose (int) ;
 int fgfsconnect (char const*,unsigned int) ;
 char* fgfsread (int,int) ;
 int fgfswrite (int,char*,...) ;
 int printf (char*,char const*) ;

int main(int argc, char **argv)
{
  int sock;
  unsigned port;
  const char *hostname, *p;
 int i;
  hostname = argc > 1 ? argv[1] : DFLTHOST;
  port = argc > 2 ? atoi(argv[2]) : DFLTPORT;
  sock = fgfsconnect(hostname, port);
  if (sock < 0)
       return EXIT_FAILURE;
  fgfswrite(sock, "data");
 fgfswrite(sock, "set /sim/rendering/clouds3d-enable true");
 fgfswrite(sock, "set /environment/clouds");
 for (i=0; i < 5; i++) {
       fgfswrite(sock, "set /environment/cloudlayers/layers[%d]/cu/cloud/name %%n", i);
       fgfswrite(sock, "set /environment/cloudlayers/layers[%d]/cb/cloud/name %%n", i);
       fgfswrite(sock, "set /environment/cloudlayers/layers[%d]/ac/cloud/name %%n", i);
       fgfswrite(sock, "set /environment/cloudlayers/layers[%d]/st/cloud/name %%n", i);
       fgfswrite(sock, "set /environment/cloudlayers/layers[%d]/ns/cloud/name %%n", i);
 }
  p = fgfsread(sock, 3);
  if (p != ((void*)0))
       printf("READ: \t<%s>\n", p);
 for (i=0; i < 5; i++) {
       fgfswrite(sock, "set /environment/clouds/layer[%d]/coverage scattered", i);
       fgfswrite(sock, "set /environment/clouds/layer[%d]/coverage cirrus", i);
       fgfswrite(sock, "set /environment/clouds/layer[%d]/coverage clear", i);
 }
 p = fgfsread(sock, 3);
  if (p != ((void*)0))
       printf("READ: \t<%s>\n", p);
  fgfswrite(sock, "quit");
  fgfsclose(sock);
  return EXIT_SUCCESS;
}
